# SteamingPlatformScala

./: CMakeLists.txt  README.md  build.sbt  index.html  main.cpp  package-lock.json  package.json  vite.config.js
Backend/: .scalafmt.conf  build.sbt
Backend/conf/: application.conf  routes
app/DTO/: ApplicationPostDTO.scala  CommentsDTO.scala  CredentialsDTO.scala  HistoryDTO.scala  LiveStreamDTO.scala  MessagesDTO.scala  PostDTO.scala  RegisterDTO.scala  TokensDTO.scala  UsersDTO.scala
app/actors/: VideoSenderActor.scala  WebSocketActor.scala
app/controllers/: AuthenticationController.scala  CredentialsController.scala  HomeController.scala  LivestreamController.scala  RegisterController.scala  SwaggerController.scala  UsersController.scala  VideoController.scala  WebSocketController.scala
app/models/: ApplicationPostTable.scala  CommentsTable.scala  HistoryTable.scala  LiveStreamTable.scala  MessagesTable.scala  PostTable.scala  Tables.scala  TablesRoot.scala  TokensTable.scala
app/repositories/: ApplicationPostRepository.scala  CredentialsRepository.scala  LiveStreamRepository.scala  MessagesRepository.scala  TokensRepository.scala
app/services/: CredentialsService.scala  HistoryService.scala  LiveStreamService.scala  MessagesService.scala  PostService.scala  RegisterService.scala  TokensService.scala  UsersService.scala
app/utilities/: CodeGenDTO.scala  CodeGenTables.scala  Encryptor.scala  Filters.scala  JsonOP.scala  (+1 more)
conf/: application.conf  nginx.conf  routes
documentation/: Deliverables.docx
encriptorSourceCode/: encryptor.cpp
src/: App.jsx
(+69 files in other folders)
